.provarCaches/00D5f000005vwGkEAI/objects/rstk__soservaud__c.object
<CustomObject>
    <description>soservaud__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_comment__c</fullName>
        <description>Comments associated with this service entry. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_date__c</fullName>
        <description>Date that the service was performed. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_hours__c</fullName>
        <description>The number of ‘units of service’ (example: hours or days) performed by this user on this date.  Note that the user is warned when the total units recorded exceeds the number of units sold. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>rstk__solinenic__c</referenceTo>
        <relationshipLabel>Service Usage Audits</relationshipLabel>
        <relationshipName>Service_Usage_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_txnseq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soservaud_user__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system user who performed the service. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>syusr_user_soservaud</relationshipLabel>
        <relationshipName>syusr_user_soservaud</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Usage Audit</label>
    <nameField>
        <label>Service Usage Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Usage Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>